hero text alignment issue fixed

--- a/assets/style.css
+++ b/assets/style.css
@@ -128,6 +128,10 @@ img {
   background-position: center center;
 }
 
+.hero-title__wrapper {
+  text-align: center;
+}
+
 .hero__title {
   transform: scale(0.85);
   margin: 0.5rem 0;
@@ -333,6 +337,9 @@ img {
   .hero__content {
     width: 60%;
     padding-left: 6rem;
+  }
+  .hero-title__wrapper {
+    text-align: left;
   }
   .hero__title {
     text-align: left;
